# manim-cli

./: .gitignore  README.md  package.json  pyproject.toml  requirements.txt  setup.cfg
docs/: derivative-geometry-rendering-fix-plan.md  layout-template-and-qa-optimization-execution-plan.md  layout-template-and-qa-optimization-plan.md  manim-cli-mvp-implementation-plan.md  manim-cli-phase-1-prd-review.md  manim-cli-phase-1-product-prd.md  manim-cli-quality-and-compiler-optimization-plan.md  manim-video-skill-optimization-plan.md  qa-issue-schema.md
feedback/: agent_prompt.md  latest.json
manim_cli/: build.py  cli.py  jsonio.py  source_map.py
manim_cli/commands/: compile_cmd.py  diagnose_cmd.py  example_cmd.py  init_cmd.py  knowledge_cmd.py  manifest_cmd.py  memory_cmd.py  migrate_layout_cmd.py  plan_cmd.py  qa_cmd.py  qa_eval_cmd.py  regression_cmd.py  render_cmd.py  schema_cmd.py  skill_cmd.py  source_map_cmd.py  split_layout_cmd.py  storyboard_cmd.py  validate_cmd.py  visual_qa_cmd.py
manim_cli/dsl/: analysis.py  compiler.py  cost.py  encoders.py  fingerprints.py  knowledge.py  layout.py  models.py  names.py  optimizer.py  pacing.py  performance.py  registry.py  splitting.py  templates.py  timeline.py  validators.py  writer.py
manim_cli/planning/: alignment.py  models.py  pedagogy.py  validators.py
manim_cli/qa/: adapters.py  engine.py  eval.py  feedback.py  issues.py  math_lint.py  timing.py
manim_cli/regression/: __init__.py  manifest.py
manim_cli/render/: bbox_probe.py  diagnose.py  frames.py  pacing_qa.py  runner.py  smoke.py  (+1 more)
tests/: test_mvp.py
(+26 files in other folders)
