[metadata]
name = manim-cli
version = 0.1.0
description = Agent-oriented Manim DSL compiler and runner
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.9,<3.12
include_package_data = True
install_requires =
    click
    manim
    pydantic>=2
    PyYAML>=6
    typing-extensions

[options.entry_points]
console_scripts =
    manim-cli = manim_cli.cli:main

[options.package_data]
manim_cli =
    agent/skill/*.md
    agent/skill/agents/*.yaml
    agent/skill/examples/*.json
    agent/skill/examples/pythagorean_theorem/*
    agent/skill/references/*.md
